force-app/main/default/objects/Resume__c/fields/Headshot__c.field-meta.xml
<CustomField>
    <fullName>Headshot__c</fullName>
    <description>Name of the Static Resource in the /resume folder</description>
    <inlineHelpText>Name of the Static Resource in the /resume folder</inlineHelpText>
    <label>Headshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>