force-app/main/default/objects/Resume__c/fields/Salesforce_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Certifications__c</fullName>
    <label>Salesforce Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Application Architect</fullName>
            </value>
            <value>
                <fullName>B2B Solution Architect</fullName>
            </value>
            <value>
                <fullName>B2C Commerce Architect</fullName>
            </value>
            <value>
                <fullName>B2C Commerce Developer</fullName>
            </value>
            <value>
                <fullName>B2C Solution Architect</fullName>
            </value>
            <value>
                <fullName>CPQ Specialist</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>Development Lifecycle and Deployment Architect</fullName>
            </value>
            <value>
                <fullName>Education Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Experience Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Field Service Consultant</fullName>
            </value>
            <value>
                <fullName>Heroku Architect</fullName>
            </value>
            <value>
                <fullName>Identity and Access Management Architect</fullName>
            </value>
            <value>
                <fullName>Industries CPQ Developer</fullName>
            </value>
            <value>
                <fullName>Integration Architect</fullName>
            </value>
            <value>
                <fullName>JavaScript Developer I</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Administrator</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Developer</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Email Specialist</fullName>
            </value>
            <value>
                <fullName>Nonprofit Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>OmniStudio Consultant</fullName>
            </value>
            <value>
                <fullName>OmniStudio Developer</fullName>
            </value>
            <value>
                <fullName>Pardot Consultant</fullName>
            </value>
            <value>
                <fullName>Pardot Specialist</fullName>
            </value>
            <value>
                <fullName>Platform App Builder</fullName>
            </value>
            <value>
                <fullName>Platform Developer I</fullName>
            </value>
            <value>
                <fullName>Platform Developer II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>